Add GitHub Pages homepage configuration

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "BYOA-JTsubmission-examples",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tobinslaven.github.io/BYOA-JTsubmission-examples",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
